# Trapezoidal-Profile-Grapher

./: README.md  pyproject.toml  test.csv
profile_plotter/: plotter.py  profiler.py
