[tool.poetry]
name = "profile-plotter"
version = "0.1.0"
description = ""
authors = ["DarkenedDragon <eridor314@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
